objects/Slave__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>text(IF(month(today()) &gt;= month(Slave_DOB__c), year(today())-year(Slave_DOB__c), year(today())-year(Slave_DOB__c)-1))+&apos; years &apos;+

text(IF(month(today())&gt;=month(Slave_DOB__c), month(today())-month(Slave_DOB__c), month(today())-month(Slave_DOB__c)+12))+&apos; months &apos;</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1__c</fullName>
        <label>M1</label>
        <referenceTo>M1__c</referenceTo>
        <relationshipLabel>Slaves</relationshipLabel>
        <relationshipName>Slaves</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marks1__c</fullName>
        <label>Marks1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks2__c</fullName>
        <label>Marks2</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master1__c</fullName>
        <label>Master1</label>
        <referenceTo>Master1__c</referenceTo>
        <relationshipLabel>Slaves</relationshipLabel>
        <relationshipName>Slaves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Slave_DOB__c</fullName>
        <label>Slave DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Marks__c</fullName>
        <formula>Marks1__c + Marks2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Slave</label>
    <nameField>
        <label>Slave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>